fix: better a11y color contrast

--- a/src/components/rss-club.module.css
+++ b/src/components/rss-club.module.css
@@ -1,5 +1,14 @@
+:root {
+  --rss-club-bg-color: #faf3de;
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --rss-club-bg-color: #272822;
+  }
+}
+
 .wrapper {
-  background-color: #def2fa;
+  background-color: var(--rss-club-bg-color);
   max-width: 18em;
   margin: auto;
   padding: 1em;
