--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,7 +2,7 @@
   --primary-color: #1a1a21;
   --secondary-color: #fff;
   --intermediate-color: #807f7f;
-  --link-color: #04b3fb;
+  --link-color: #047cc2;
   /* --link-color: #1f8dba; */
 }
 
